added content to cloudDevOps.html

--- a/src/Course7/cloudDevOps.html
+++ b/src/Course7/cloudDevOps.html
@@ -1,11 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cloudDevOps</title>
 </head>
+
 <body>
-    <h1>cloudDevOps</h1>
+    <h1>Get Started with Cloud Native, DevOps, Agile, and NoSQL</h1>
+    <ul>
+        <li>Introduction to Cloud Native</li>
+        <ul>
+            <li>
+                Do you want to learn about developing cloud native applications from conception to implementation? This
+                module will begin with some fundamental cloud concepts. Then you'll get into specific tools and
+                techniques
+                for creating cloud native applications. You will also learn about the Cloud Native Computing Foundation,
+                the
+                importance of hybrid cloud infrastructures, and how they affect cloud app developers. Then you'll look
+                at
+                two important aspects of cloud thinking: modernization and continuous integration/continuous delivery.
+            </li>
+            <ul>
+                <li>Welcome to Developing Cloud Native Applications</li>
+                <li>Cloud Computing Overview</li>
+                <li>Cloud Native Applications</li>
+                <li>CNCF</li>
+                <li>Hybrid Cloud (Optional)</li>
+                <li>Modernizing with Cloud Native Technologies</li>
+            </ul>
+        </ul>
+        <li>DevOps & CI/CD</li>
+        <ul>
+            <li>
+                Are you looking to improve your organizational culture and automate the stages of app development? In
+                this
+                module, you will begin by discovering how adopting a DevOps culture will aid in the collaboration of
+                development and operations engineers throughout the development lifecycle. Then you’ll experiment with
+                different ways of working, such as using test-driven and behavior-driven development techniques to
+                ensure
+                repeatable behavior and high code quality. Test-driven development (TDD) allows you to develop more
+                quickly
+                and confidently. In contrast, Behavior Driven Development (BDD) tests the system’s behavior from the
+                outside
+                and ensures that it behaves as intended. You’ll then see how implementing Continuous Integration and
+                Continuous Delivery practices guarantees that every change contributes to a potentially shippable
+                feature.
+                You will also learn about the fundamental DevOps and CI/CD tools developers use worldwide. Then you’ll
+                discover why empowering people to do their best work contributes to the organizational DevOps goal of
+                achieving a shared mindset and empowering everyone to deliver customer value.
+            </li>
+            <ul>
+                <li>Intro to DevOps & CI/CD</li>
+                <li>Definition of DevOps</li>
+                <li>Test Driven Development</li>
+                <li>Behavior Driven Development (BDD)</li>
+                <li>What is CI/CD></li>
+                <li>Benefits of CI</li>
+                <li>Tools for DevOps, CI and CD</li>
+                <li>Everyone is Responsible for Success</li>
+                <li>Essential Characteristics of DevOps</li>
+                <li>DevOps Tools Categories and Their Available Tools</li>
+                <li></li>
+            </ul>
+        </ul>
+        <li>Agile & Scrum</li>
+        <ul>
+            <li>
+                This module will introduce you to Agile philosophy and principles. You'll learn about Scrum as a
+                framework for applying Agile principles to project management. You'll also learn more about Agile
+                iterative planning, how businesses can use Agile to organize for success, and how team alignment and
+                autonomy help develop better systems. You'll also learn how to create and refine a product backlog,
+                write compelling user stories, estimate and assign story points, and plan a sprint. Finally, you'll
+                discover how to conduct sprint reviews and retrospectives.
+            </li>
+            <ul>
+                <li>Introduction to Agile Development and Scrum</li>
+                <li>Agile Principles</li>
+                <li>Scrum Overview</li>
+                <li>Organizational Impact of Agile</li>
+                <li>Mistaking Iterative Development for Agile</li>
+                <li>Destination Unknown</li>
+                <li>Agile Roels and the Need for Training</li>
+                <li>Creating Good User Stories</li>
+                <li>Effectively using Story Points</li>
+                <li>Building the Product Backlog</li>
+                <li>Sprint Planning</li>
+                <li>The Sprint Review</li>
+                <li>The Sprint Retrospective</li>
+                <li>Lab: Get Set Up in GitHub</li>
+                <li>Lab: Assemble your Product Backlog using GitHub</li>
+            </ul>
+        </ul>
+        <li>NoSQL Databases in Cloud</li>
+        <ul>
+            <li>
+                This module will equip you with an understanding of MongoDB's characteristics and practical experience
+                in tasks such as CRUD operations, limiting and sorting records, indexing, and aggregation. Additionally,
+                you will delve into MongoDB's essential concepts of replication and sharding, which facilitate its
+                scalability and availability. Additionally, you will gain insight into IBM Cloudant and its key features
+                and capabilities, including its architecture, technologies, benefits, and common use cases.
+            </li>
+            <ul>
+                <li>Overview of NoSQL</li>
+                <li>Overview of MongoDB</li>
+                <li>Advantages of MongoDB</li>
+                <li>Use Cases for MongoDB</li>
+                <li>CRUD Operations</li>
+                <li>Overview of Cloudant</li>
+                <li>IBM Cloudant Architecture and Key Technologies</li>
+                <li>Cloudant Benefits and Solutions</li>
+                <li>MongoDB in the Cloud IDE</li>
+            </ul>
+        </ul>
+        <li>Final Project and Final Exam</li>
+        <ul>
+            <li>
+                Welcome to the final project for the course "Get Started with Cloud Native, DevOps, Agile, and NoSQL."
+                In this project, you will have the exciting opportunity to apply the skills you have learned throughout
+                the course and put them into action. By working on the Tax Calculator application, you will enhance its
+                functionality and modernize it using the knowledge you have gained. You will be provided with a
+                boilerplate code for the Tax Calculator app, which will serve as the foundation for your project. By
+                actively participating in this project, you will gain hands-on experience in applying cloud-native
+                principles, DevOps practices, agile methodologies, and NoSQL databases to enhance an application. Get
+                ready to dive in and take your skills to the next level!
+            </li>
+            <ul>
+                <li>Epics and Stories</li>
+                <li>Modernize Application and DevOps</li>
+            </ul>
+        </ul>
+    </ul>
 </body>
+
 </html>
