docker file filled with content

--- a/src/Course8/dockerKubernetes.html
+++ b/src/Course8/dockerKubernetes.html
@@ -1,11 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dockerKubernetes</title>
 </head>
+
 <body>
-    <h1>dockerKubernetes</h1>
+    <h1>Introduction to Containers w/ Docker, Kubernetes & OpenShift</h1>
+    <ul>
+        <li>Containers and Containerization</li>
+        <ul>
+            <li>Start your first week by learning about container concepts, features, use cases, and benefits. Building
+                on your new knowledge of containers, you’ll learn what Docker does and discover why Docker is a winner
+                with developers. You’ll learn what Docker is, become acquainted with Docker processes, and explore
+                Docker’s underlying technology. Learn about how developers and organizations can benefit from using
+                Docker and see which situations are challenging for using Docker. Next, learn how to build a container
+                image using a Dockerfile, how to create a running container using that image, become familiar with the
+                Docker command line interface (CLI), and explore frequently used Docker commands. You’ll become
+                knowledgeable about Docker objects, Dockerfile commands, container image naming, and learn how Docker
+                uses networks, storage, and plugins. Then, assimilate this knowledge when you see Docker architecture
+                components in action and explore containerization using Docker. At the end of this first week, you’ll
+                pull an image from a Docker Hub registry. You’ll run an image as a container using Docker, build and tag
+                an image using a Dockerfile, and push that image to a registry. </li>
+                <ul>
+                    <li>Introduction to Containers</li>
+                    <li>Introduction to Docker</li>
+                    <li>Building and Running Container Images</li>
+                    <li>Docker Objects</li>
+                    <li>Docker Architecture</li>
+                </ul>
+        </ul>
+        <li>Kubernetes Basics</li>
+        <ul>
+            <li>In week two, learn what container orchestration is. Then, explore how developers can use container
+                orchestration to create and manage complex container environment development lifecycles. Kubernetes is
+                currently the most popular container orchestration platform. You’ll examine key Kubernetes architectural
+                components, including control plane components and controllers. Explore Kubernetes objects, and learn
+                how specific Kubernetes objects such as Pods, ReplicaSets, and Deployments work. Then, learn how
+                developers use the Kubernetes command line interface (CLI), or “kubectl” to manipulate objects, manage
+                workloads in a Kubernetes cluster, and apply basic kubectl commands. You’ll be able to differentiate the
+                benefits and drawbacks of using imperative and declarative commands. At the end of this module, you will
+                use the kubectl CLI commands to create resources on an actual Kubernetes cluster. At the end of this
+                week, you’ll use the Kubernetes CLI to create a Kubernetes pod, create a Kubernetes deployment, create a
+                ReplicaSet and see Kubernetes load balancing in action.</li>
+                <ul>
+                    <li>Container Orchestration</li>
+                    <li>Introduction to Kubernetes</li>
+                    <li>Kubernetes Architecture</li>
+                    <li>Kubernetes Objects - Part 1</li>
+                    <li>Kubernetes Objects - Part 2</li>
+                    <li>Using Kubectl</li>
+
+                </ul>
+        </ul>
+        <li>Managing Applications with Kubernetes</li>
+        <ul>
+            <li>In week three, you’ll explore ReplicaSets, autoscaling, rolling updates, ConfigMaps, Secrets, and
+                service bindings, and learn how you can use these capabilities to manage Kubernetes applications. You’ll
+                learn how ReplicaSets scale applications to meet increasing demand, and how autoscaling creates dynamic
+                demand-based scaling. You’ll see how to use rolling updates to publish application updates and roll back
+                changes without interrupting the user experience. You’ll learn how to use ConfigMaps and Secrets to
+                provide configuration variables and sensitive information to your deployments and to keep your code
+                clean. At the end of the week, you’ll scale and update applications deployed in Kubernetes.</li>
+                <ul>
+                    <li>ReplicaSet</li>
+                    <li>Autoscaling</li>
+                    <li>Rolling Updates</li>
+                    <li>ConfigMaps and Secrets</li>
+                    <li>Service Binding</li>
+                    <li>Deployment Strategies</li>
+                    <li>Lab: Scaling and Updating Applications</li>
+                    <li>Lab: Autoscaling and Secrets Management</li>
+                </ul>
+        </ul>
+        <li>The Kubernetes Ecosystem: OpenShift, Istio, etc.</li>
+        <ul>
+            <li>In week four, you’ll learn more about the growing Kubernetes ecosystem and explore additional tools that
+                work well with Kubernetes to support cloud-native development. You’ll gain an understanding of the
+                similarities and differences between Red Hat ® OpenShift® and Kubernetes and see what OpenShift
+                architecture looks like. You’ll learn about OpenShift builds and BuildConfigs, and OpenShift build
+                strategies and triggers. You'll also discover how operators can deploy whole applications with ease.
+                Finally, you’ll examine how the Istio service mesh manages and secures traffic and communication between
+                an application’s services. At the end of the week, you’ll use the oc CLI to perform commands on an
+                OpenShift cluster. And you’ll use the OpenShift build capabilities to deploy an application from source
+                code stored in a Git repository.</li>
+                <ul>
+                    <li>Introduction to Red Hat OpenShift</li>
+                    <li>Builds</li>
+                    <li>Operators</li>
+                    <li>Istio</li>
+                </ul>
+        </ul>
+        <li>Final Assignment</li>
+        <ul>
+            <li>For the Final Project, you will put into practice the tools and concepts learned in this course, and
+                deploy a simple guestbook application with Docker and Kubernetes. The entire application will be
+                deployed and managed on OpenShift.</li>
+                <ul>
+                    <li>Understanding ConfigMaps, DaemonSets, Kubernetes Services, Secrets & Persistent Volume Claims</li>
+                    <li>Build and Deploy a Simple Guestbook App</li>
+                    <li>Optional: Deploy Guestbook App from the OpenShift Internal Registry</li>
+                </ul>
+        </ul>
+    </ul>
 </body>
+
 </html>
