--- a/src/Course9/microservices.html
+++ b/src/Course9/microservices.html
@@ -6,6 +6,22 @@
     <title>microservices</title>
 </head>
 <body>
-    <h1>microservices</h1>
+    <h1>Application Development using Microservices and Serveless</h1>
+    <ul>
+        <li>Introduction to Microservices</li>
+        <ul>
+            <li>Twelve-Factor App Methodology</li>
+            <li>What are Microservices</li>
+            <li>Comparison of Monolith vs SOA vs Microservices</li>
+            <li>Microservices Patterns</li>
+            <li>Microservices Anti-Patterns</li>
+            <li>Modernize JPetStore with Microservices</li>
+        </ul>
+        <li>Web API Essentials: REST API and GraphQL</li>
+        <li>Serveless Overview</li>
+        <li>Create and Deploy Microservices using Serverless</li>
+        <li>Final Project</li>
+        <li>Optional: OpenShift Essentials/Working with OpenShift and Istio</li>
+    </ul>
 </body>
 </html>
