microservices content added

--- a/src/Course9/microservices.html
+++ b/src/Course9/microservices.html
@@ -1,27 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>microservices</title>
 </head>
+
 <body>
     <h1>Application Development using Microservices and Serveless</h1>
     <ul>
         <li>Introduction to Microservices</li>
         <ul>
-            <li>Twelve-Factor App Methodology</li>
-            <li>What are Microservices</li>
-            <li>Comparison of Monolith vs SOA vs Microservices</li>
-            <li>Microservices Patterns</li>
-            <li>Microservices Anti-Patterns</li>
-            <li>Modernize JPetStore with Microservices</li>
+            <li>In this module, you will learn methodologies to follow while creating microservices. Learn the best
+                practices for your application’s development, deployment, and operation stages. Also, understand how
+                microservices allow you to independently design, deploy, and scale them while avoiding a single point of
+                failure in your architecture. And finally, get an insight into different anti-patterns to avoid while
+                designing microservices-based applications.</li>
+            <ul>
+                <li>Twelve-Factor App Methodology</li>
+                <li>What are Microservices</li>
+                <li>Comparison of Monolith vs SOA vs Microservices</li>
+                <li>Microservices Patterns</li>
+                <li>Microservices Anti-Patterns</li>
+                <li>Modernize JPetStore with Microservices</li>
+            </ul>
         </ul>
         <li>Web API Essentials: REST API and GraphQL</li>
+        <ul>
+            <li>In this module, you will learn about the REST architecture, its key characteristics of flexibility, uniformity, and scalability. Create your very first REST based API using Python and Flask. Use Swagger to document it and test it using cURL, Postman, and a functionality provided by Swagger. Learn the importance of API Gateways, why you need them, their advantages, especially for abstracting your backend and allowing you to plug additional services.</li>
+            <ul>
+                <li>What is REST?</li>
+                <li>Introduction to API Gateway</li>
+                <li>Creating REST APIs</li>
+                <li>Making API Requests using cURL and Postman</li>
+                <li>Documenting and Testing REST API with Swagger</li>
+                <li>Optional: Basics of GraphQL</li>
+                <li>Lab: Creating a HELLO WORLD REST API with Python & Flask</li>
+                <li>Lab: CRUD Operations with Python</li>
+                <li>Lab: Creating a Swagger Documentation for REST API</li>
+                <li>Lab: (Optional) Querying with GraphQL</li>
+            </ul>
+        </ul>
         <li>Serveless Overview</li>
+        <ul>
+            <li>In this module, you will learn the basics of Serverless applications, and compare them with Containers and Traditional computing models while looking at the advantages and disadvantages of each. You will also understand the Function-as-a-Service model and its constraints. Further, get an overview of the Serverless Framework, a reference architecture, and other use cases. And finally, you will learn about the serverless platforms most commonly used these days.</li>
+            <ul>
+                <li>Introduction to Serverless Computing</li>
+                <li>Serverless Pros and Cons</li>
+                <li>Introduction to the FaaS Model</li>
+                <li>The Serverless Framework</li>
+                <li>Serverless Reference Architecture and Use Cases</li>
+                <li>Popular Serverless Platforms</li>
+                <li>AWS Lambda</li>
+            </ul>
+        </ul>
         <li>Create and Deploy Microservices using Serverless</li>
+        <ul>
+            <li>In this module, you will learn about how the IBM Cloud Code Engine builds and deploys your apps in seconds. You will then be introduced to IBM Cloud Code Engine’s use cases: deploy applications, build and deploy applications, and run jobs. Next, you will use a Dockerfile to build a container-based application. You will learn to use the IBM Cloud Console or IBM Cloud CLI to perform the application deployment tasks and then deploy it on the IBM Cloud Code Engine.</li>
+            <ul>
+                <li>IBM Cloud Engine</li>
+                <li>Project, Application, Build, and Jobs</li>
+                <li>Building Container Images for Microservices</li>
+                <li>Deploying and Running Application</li>
+                <li>Updating Deployed Application</li>
+                <li>Lab: Deploying your first application on Code Engine</li>
+                <li>Lab: Deploying your first Docker image on Code Engine</li>
+                <li>Lab: Deploy, Update, and Scale Microservices using Serverless</li>
+            </ul>
+        </ul>
         <li>Final Project</li>
+        <ul>
+            <li>Microservices based Serverless Application</li>
+
+        </ul>
         <li>Optional: OpenShift Essentials/Working with OpenShift and Istio</li>
+        <ul>
+            <li>Red Hat OpenShift Recap</li>
+            <li>Service Mesh and Istio</li>
+            <li>Microservices with OpenShift</li>
+            <li>Red Hat Marketplace</li>
+        </ul>
     </ul>
 </body>
+
 </html>
