node.js & mongoDB content added

--- a/src/Course10/nodeMongoDB.html
+++ b/src/Course10/nodeMongoDB.html
@@ -6,6 +6,89 @@
     <title>nodeMongoDB</title>
 </head>
 <body>
-    <h1>nodeMongoDB</h1>
+    <h1>Node.js & MongoDB: Developing Back-end Database Application</h1>
+    <ul>
+        <li>Introduction to Working with Databases</li>
+        <ul>
+            <li>Course Introduction</li>
+            <li>Introduction to Data and Databases</li>
+            <li>Relational Databases</li>
+            <li>Relational Data Concepts</li>
+            <li>Non-relational Databases</li>
+            <li>Overview of NoSQL</li>
+            <li>Characteristics of NoSQL Databases</li>
+            <li>Getting started with MongoDB</li>
+            <li>Lab: Implement a Product Catalog Database on MongoDB</li>
+        </ul>
+        <li>Working with Node and Databases</li>
+        <ul>
+            <li>
+                In this module, you will learn about NoSQL databases. You will explore how to create scalable and efficient Node applications using the NoSQL database, MongoDB. You will also learn how to choose a NoSQL database for your Node application. You get oriented with the process of connecting Node to the MongoDB database and explore how to troubleshoot these connections. This module will also help you familiarize with the features of MongoDB and enable you to query and manipulate data using it. You will understand CRUD operations. You will learn different techniques of authentication, authorization, and handling user sessions and cookies.
+            </li>
+            <ul>
+                <li>NoSQL Databases with Node</li>
+                <li>Manipulating Data with MongoDB</li>
+                <li>Querying Data with MongoDB</li>
+                <li>Introduction to Authentication and Authorization</li>
+                <li>Implementing User Registration and Login Functionality</li>
+                <li>Secure Password Storage and Authorization</li>
+                <li>Handling User Sessions and Cookies</li>
+                <li>Lab: Connect Node with MongoDB</li>
+                <li>Lab: Exploring and Manipulating Data with MongoDB with Node</li>
+                <li>Lab: Implementing User Registration and Login </li>
+            </ul>
+        </ul>
+        <li>Working with REST API's and advanced Node concepts</li>
+        <ul>
+            <li>n this module, you will learn APIs and RESTful APIs. You will explore HTTP methods in RESTful APIs, resource and endpoint design, different data formats, how to authenticate clients and grant access to protected resources. This module provides you with insights into the Express framework, routes and controllers. You will study how to handle errors in request processing. This module is a guide to various approaches to versioning during API. You will delve into the common pagination techniques including how to manage conflicts between versioning and pagination. This module orients you with CRUD operations and how to implement them. You will get an understanding of JSON web tokens, also known as JWT, which are used to secure applications with RESTful API.</li>
+            <ul>
+                <li>Introduction to RESTful APIs</li>
+                <li>Building a RESTful API with Express</li>
+                <li>Versioning and Pagination in RESTful APIs</li>
+                <li>Implementing CRUD Operations in RESTFful APIs</li>
+                <li>Authentication and Authorization in Node</li>
+                <li>Securing RESTful APIs with JWT</li>
+                <li>Lab: Implement RESTful API for GET and POST operation.</li>
+                <li>Lab: Implementing JWT Authentication in a Customer Portal API</li>
+                <li>Lab: Create a RESTful API that allows users to perform CRUD operations</li>
+            </ul>
+        </ul>
+        <li>Error Handling and Middleware</li>
+        <ul>
+            <li>This module introduces you to error handling in Node. You will learn common types of errors and explore various error-handling techniques. This module provides you with an overview of customer error-handling middleware, its benefits, and its implementation in real-world scenarios. You will also get familiar with request validation and request sanitization using common request validation techniques. This module also introduces you to rate limiting and throttling.</li>
+            <ul>
+                <li>Introduction to Error Handling in Node</li>
+                <li>Custom Error Handling Middleware</li>
+                <li>Asynchronous Error Handling in Node</li>
+                <li>Request Validation and Sanitization</li>
+                <li>Rate Limiting and Throttling Requests</li>
+                <li>Logging and Debugging Node Applications</li>
+                <li>Lab: Implementing Error Handling in Node</li>
+                <li>Lab: Logging and Debugging Applications using Node and Express</li>
+                <li>Lab: Implementing custom error handling middleware in an Express app</li>
+            </ul>
+        </ul>
+        <li>Scaling and Deploying Node Applications</li>
+        <ul>
+            <li>In this module you will explore the Node application deployment process, manage dependencies and versions and familiarize yourself with authentication and authorization mechanisms. This module presents you with the process of increasing the capacity of an application via an overview of different scaling approaches and load-balancing strategies. You will understand how to design scalable node architecture, get introduced to load balancing and high availability, and how to implement fault recovery mechanisms.</li>
+            <ul>
+                <li>File Uploads and Handling in Node</li>
+                <li>Deploying Node Applications</li>
+                <li>Best Practices for Backend Development</li>
+                <li>Scaling Node Applications</li>
+                <li>Load Balancing and High Availability</li>
+                <li>Lab: Deploying a Dockerized Node App for Customer Portals</li>
+                <li>Lab: Deploying a Node app to a cloud platform</li>
+                <li>Lab: Create a File Upload and Handling App in Node and Express</li>
+            </ul>
+        </ul>
+        <li>Final Project</li>
+        <ul>
+            <li>In this module you will complete a final project based on the concepts of developing a web application for a Social Media Dashboard with user authentication, security based on JSON Web Tokens (JWT), and post management. The back-end is implemented using Node.js and Express, while the frontend utilizes HTML, CSS, and JavaScript. Key features include user registration, login, post creation, and pagination. The design emphasizes simplicity and security through middleware and session management.</li>
+            <ul>
+                <li>Lab: Final Project</li>
+            </ul>
+        </ul>
+    </ul>
 </body>
 </html>
