added all content

--- a/src/Course11/fullStackProject.html
+++ b/src/Course11/fullStackProject.html
@@ -6,6 +6,62 @@
     <title>fullStack Project</title>
 </head>
 <body>
-    <h1>fullStack Project</h1>
+    <h1>JavaScript Full Stack Capstone Project</h1>
+    <ul>
+        <li>Project Introduction, Repository Setup, User Stories and Database Setup</li>
+        <ul>
+            <li>In this module, you begin developing the Gift-Link full-stack application. You learn about the application from a user perspective in the project walk-through video and get a high-level perspective by reading about its architecture and requirements in the project overview. In the first of two-hands on labs in the module, you develop a GitHub user story template and subsequent user stories for the application’s development. In the second lab, you will apply your skills to set up the NoSQL MongoDB database that provides the data and data management for the application.</li>
+            <ul>
+                <li>Project Introduction, Repository Setup, User Stories and Database Setup</li>
+            </ul>
+        </ul>
+        <li>Back-end APIs and Services</li>
+        <ul>
+            <li>In this module, you develop back-end APIs and services in three labs. In the first lab, you will create the API for handling gifts. The API includes retrieving gifts from the database and fetching a gift by its ID. You configure the gift route in the main Express application. In the second lab, you develop the search function API, including functionality to filter by different gift attributes. You also integrate the search route into the Express application. In the third lab, you will develop an Express server to perform sentiment analysis using an NPM package that provides functionality for natural language processing.</li>
+            <ul>
+                <li>Back-end API's and Services</li>
+                <li>Back-end APIs and Services</li>
+                <li>Lab: Create API for Gift Service</li>
+                <li>Lab: Create API for Search Service</li>
+                <li>Lab: Add a Sentiment Analysis Service</li>
+            </ul>
+        </ul>
+        <li>Add Front-end Pages</li>
+        <ul>
+            <li>In this module, you work on the application’s user-facing pages. The module contains five labs. In the first lab, you will write CSS and HTML to create the landing page. For the remaining four labs, you will complete the development of the React components that handle the main listings page, the navigation bar, the register and login pages, the details page, and the search pages.</li>
+            <ul>
+                <li>Lab: Create the Landing Page</li>
+                <li>Lab:Create the MainPage and Navbar</li>
+                <li>Lab: Create Register and Login Pages</li>
+                <li>Lab: Implement the Details Page</li>
+                <li>Lab: Implement the Search Page</li>
+            </ul>
+        </ul>
+        <li>Back-end APIs for Front-end Components</li>
+        <ul>
+            <li>In this module, there are six labs. In three of the labs, you complete the development of three APIs in the back end to handle registration, login, and updates to the user profile. In the other three labs, you also update the respective components to call the APIs when the user interacts with these elements.</li>
+            <ul>
+                <li>Lab: Develop Back-end Integration for Registration</li>
+                <li>Lab: Implement Back-end in Register Component</li>
+                <li>Lab: Develop Back-end Integration for Login</li>
+                <li>Lab: Implement Back-end in Login Component</li>
+                <li>Lab: Develop Back-end Integration for User Profile</li>
+                <li>Lab: Develop Back-end Integration for User Profile</li>
+                <li>Lab: Implement Back-end in Profile Component</li>
+            </ul>
+        </ul>
+        <li>CI/CD, Containerize, and Deploy</li>
+        <ul>
+            <li>In the two labs in this module, you will work to containerize and deploy your application. The first lab presents some CI/CD practices using linting with GitHub Actions to ensure the code meets coding standards. In the second lab, you will deploy MongoDB, the back-end server using Kubernetes, and the front-end server using IBM Code Engine.</li>
+            <ul>
+                <li>Lab: Containerize and Deploy Application</li>
+                <li>Front-end/Back-end Integration and CI/CD</li>
+            </ul>
+        </ul>
+        <li>Final Project Submission and Peer Review</li>
+        <ul>
+            <li>In this module, you submit your final project for evaluation. A peer will evaluate your application and you will evaluate one of theirs. A rubric provides a list of criteria for assessment. The rubric also gives point values depending on the completeness of the criteria.</li>
+        </ul>
+    </ul>
 </body>
 </html>
