--- a/src/Course12/careerGuide.html
+++ b/src/Course12/careerGuide.html
@@ -6,6 +6,49 @@
     <title>careerGuide</title>
 </head>
 <body>
-    <h1>careerGuide</h1>
+    <h1>Software Developer Career Guide and Interview Preparation</h1>
+    <ul>
+        <li>Building a Foundation</li>
+        <ul>
+            <li>Your job search will be much more effective if you do some primary work before you begin. In Building a Foundation, you’ll learn how to clearly understand the jobs you will be looking for. You’ll learn how to write a basic resume and collect your previous work examples into a portfolio. You’ll also create some other materials that will be useful, such as a cover letter and an elevator pitch.</li>
+            <ul>
+                <li>Understanding the Role of a Software Engineer</li>
+                <li>Introduction to Full Stack Software Development PC</li>
+                <li>Introduction to DevOps and Software Engineering PC</li>
+                <li>Opportunities in Software Development</li>
+                <li>Build your portfolio</li>
+                <li>Draft your resume</li>
+                <li>Job Role Titles</li>
+                <li>IBM Certificates for Software Engineering Skills</li>
+            </ul>
+        </ul>
+        <li>Applying and Preparing to Interview</li>
+        <ul>
+            <li>Job Seeking and Interview Preparation helps you understand how to put yourself forth as a memorable candidate. You’ll get guidance on researching prospective companies and assessing job leads to sift out the ones you want to focus on. You’ll learn about rehearsing for interviews and why it can make a big difference in your performance. And you’ll learn ways to network and let people you meet help you find your ideal role.</li>
+            <ul>
+                <li>Company and Industry Research</li>
+                <li>Networking Online and Off</li>
+                <li>Assessing job listing</li>
+                <li>Technical Review Fundamentals</li>
+                <li>Refreshing Essential Development Skills</li>
+                <li>Interview Rehearsal</li>
+                <li>Applying for A Job</li>
+            </ul>
+        </ul>
+        <li>Interviewing</li>
+        <ul>
+            <li>After you’ve attracted a company’s attention, it’s important to know how to follow through. The Interviewing module will guide you through the interview process from beginning to end. You’ll learn about common types of interviews and what to expect from them, including code challenges. You’ll also learn some crucial tips for making a great impression in a final interview and how to follow up so that you stand out from the crowd.</li>
+            <ul>
+                <li>Overview of the Interview Process</li>
+                <li>Mock Interview of a Software Engineer: Part 1-4</li>
+                <li>Coding Challenges in Software Engineering</li>
+                <li>Final interviewing</li>
+                <li>Interviewing: Discussing a Project</li>
+                <li>Unethical Questions and Behaviors</li>
+                <li>Check List</li>
+                <li>Congrats and Next Steps</li>
+            </ul>
+        </ul>
+    </ul>
 </body>
 </html>
