--- a/src/Course1/introToSoftware.html
+++ b/src/Course1/introToSoftware.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intro to Software Engineering</title>
+    <link rel="stylesheet" href="/src/srcStyles.css">
 </head>
 <body>
     <h1>Intro To Software Engineering</h1>
