applying styles to every file

--- a/src/Course10/nodeMongoDB.html
+++ b/src/Course10/nodeMongoDB.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nodeMongoDB</title>
+    <link rel="stylesheet" href="/src/srcStyles.css">
 </head>
 <body>
     <h1>Node.js & MongoDB: Developing Back-end Database Application</h1>
