--- a/src/Course12/careerGuide.html
+++ b/src/Course12/careerGuide.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>careerGuide</title>
+    <link rel="stylesheet" href="/src/srcStyles.css">
 </head>
 <body>
     <h1>Software Developer Career Guide and Interview Preparation</h1>
