--- a/src/Course11/fullStackProject.html
+++ b/src/Course11/fullStackProject.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fullStack Project</title>
+    <link rel="stylesheet" href="/src/srcStyles.css">
 </head>
 <body>
     <h1>JavaScript Full Stack Capstone Project</h1>
