--- a/src/Course6/nodeExpress.html
+++ b/src/Course6/nodeExpress.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nodeExpress</title>
+    <link rel="stylesheet" href="/src/srcStyles.css">
 </head>
 <body>
     <h1>Developing Back-end Apps with Node.js and Express</h1>
