--- a/index.html
+++ b/index.html
@@ -160,10 +160,9 @@
     <section>
         <h2>Additional Resources</h2>
         <ul>
+            <li>Complete <a href="https://www.freecodecamp.org/learn/full-stack-developer/">Full-Stack Developer Guide</a></li>
             <li>Use <a href="https://leetcode.com/problems/create-hello-world-function/description/?envType=study-plan-v2&envId=30-days-of-javascript" target="_blank">Leetcode for learning.</a></li>
-            <li>Use <a href="https://roadmap.sh/full-stack" target="_blank">developer roadmaps</a></li>
-            <li>YouTube, StackOverFlow, and LLM's are great teachers.</li>
-            <li><a href="https://www.coursera.org/professional-certificates/ibm-full-stack-javascript-developer" target="_blank">Coursera FullStack JavaScript Dev</a></li>
+            <li>Watch <a href="https://www.youtube.com/watch?v=TG6XSFeOT3g">programmers</a>, and <a href="https://www.youtube.com/watch?v=erEgovG9WBs">get the gist of web development</a>.</li>
         </ul>
     </section>
 
