--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VanillaScript</title>
+    <title>DevGuides</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="flower-icon-png.png" type="image/png">
 </head>
 
 <body>
     <header>
-        <h1>VSCRIPT</h1>
+        <h1>DevGuides</h1>
     </header>
 
     <section>
